--- a/render.yaml
+++ b/render.yaml
@@ -5,9 +5,6 @@ services:
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python web.py"
-    databases:
-      - name: stadthavet-db
-        property: DATABASE_URL
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
@@ -15,6 +12,10 @@ services:
         value: true
       - key: ALLOWED_ORIGINS
         value: https://stad.bringsvor.com
+      - key: DATABASE_URL
+        fromDatabase:
+          name: stadthavet-db
+          property: connectionString
       # BARENTSWATCH_CLIENT_ID, BARENTSWATCH_CLIENT_SECRET, MET_CLIENT_ID
       # need to be added manually in Render dashboard as secret env vars
 
@@ -25,15 +26,16 @@ services:
     schedule: "0 */12 * * *"  # At minute 0 past every 12th hour
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python barents.py"
-    databases:
-      - name: stadthavet-db
-        property: DATABASE_URL
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
+      - key: DATABASE_URL
+        fromDatabase:
+          name: stadthavet-db
+          property: connectionString
       # Same env vars as web service - add in Render dashboard
 
-# PostgreSQL database (optional - can also use Render's built-in DB)
+# PostgreSQL database
 databases:
   - name: stadthavet-db
     databaseName: stadthavet
