--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
   - type: web
     name: stadthavet-ais
     env: python
+    region: frankfurt  # EU region closest to Norway
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python web.py"
     envVars:
@@ -23,6 +24,7 @@ services:
   - type: cron
     name: stadthavet-ais-collector
     env: python
+    region: frankfurt  # EU region closest to Norway
     schedule: "0 */12 * * *"  # At minute 0 past every 12th hour
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python barents.py"
@@ -38,5 +40,6 @@ services:
 # PostgreSQL database
 databases:
   - name: stadthavet-db
+    region: frankfurt  # EU region closest to Norway
     databaseName: stadthavet
     user: stadthavet
